fixed the header tag in .section1 to align center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ nav li {
 }
 
 .section1 {
-    display: flex;.
+    display: flex;
     align-items: center;
     border: 3px dashed black;
     margin-top: 20px;
